Updated agent photos, removed residence button, and added functionality to the contact and gallery buttons.

--- a/website-2/index.html
+++ b/website-2/index.html
@@ -77,11 +77,10 @@
 </div>
 </a>
 <div class="hidden md:flex items-center gap-8">
-<a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#">Residence</a>
-<a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#">Gallery</a>
+<a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#gallery">Gallery</a>
 <a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#">Specs</a>
 <a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="about.html">About Us</a>
-<a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#">Contact</a>
+<a class="text-sm font-medium text-gray-300 hover:text-white transition-colors" href="#contact">Contact</a>
 </div>
 <div class="flex items-center gap-4">
 <button class="hidden md:flex items-center justify-center h-10 px-6 border border-white/20 hover:border-white text-sm font-bold uppercase tracking-wide transition-all rounded hover:bg-white/5">
@@ -99,15 +98,11 @@
 </nav>
 <header class="relative h-screen min-h-[700px] w-full flex items-center justify-center overflow-hidden">
 <div class="absolute inset-0 z-0">
-<img alt="The Aviator residence exterior at dusk with warm interior lighting" class="h-full w-full object-cover brightness-[0.6] contrast-[1.1]" data-alt="Modern luxury house exterior at twilight with glowing windows" src="https://lh3.googleusercontent.com/aida-public/AB6AXuD3SXBnd1EGvnyEHIigVeqFMc-L_KRE__8W0y1sor-LgymoWaPYz8SoqiBtyo3GcGyujBXAJtOFG0hzfznvIDx3re0UeThPCnAJVxJ3Dcd-bt02A8Nhz2In4tgXXERR6Cj6KO2SEFRDgmqE1dhG5Hl8WTARylhgHqW7qIKON1EQpd9QbeGRU5rCu-ks1D7tqMEA9SxS-qctmnegS-q7nhL02AR0pNkRnqSTxgJ47mNrN-9OUaVDtyCpHsahP-drAcuf55u72Vi-akLh"/>
+<img alt="Aerial view of The Aviator residence" class="h-full w-full object-cover brightness-[0.6] contrast-[1.1]" src="images/gallery/Aerials-7.jpg"/>
 <div class="absolute inset-0 bg-gradient-to-b from-black/60 via-transparent to-[#0B0B0D]"></div>
 <div class="absolute inset-0 bg-[url('https://www.transparenttextures.com/patterns/carbon-fibre.png')] opacity-10 mix-blend-overlay"></div>
 </div>
 <div class="relative z-10 container mx-auto px-4 pt-20 text-center">
-<div class="inline-flex items-center gap-2 border border-white/20 bg-black/40 backdrop-blur-sm px-4 py-1.5 rounded-full mb-8 animate-fade-in-up">
-<span class="w-2 h-2 rounded-full bg-primary animate-pulse"></span>
-<span class="text-xs font-semibold tracking-widest uppercase text-white/90">Exclusive Listing</span>
-</div>
 <h1 class="text-6xl md:text-8xl lg:text-9xl font-black text-white uppercase tracking-tighter mb-4 leading-none drop-shadow-2xl">
                 The Aviator
             </h1>
@@ -215,7 +210,7 @@
 </div>
 </div>
 </section>
-<section class="py-24 bg-[#111113] pb-40">
+<section id="gallery" class="py-24 bg-[#111113] pb-40">
 <div class="container mx-auto px-4">
 <div class="flex flex-col md:flex-row items-start md:items-center justify-between mb-12 gap-6">
 <h3 class="text-4xl font-bold text-white uppercase tracking-tight">Visual Manifest</h3>
@@ -456,7 +451,7 @@
 </div>
 </div>
 </section>
-<footer class="bg-background-dark border-t border-white/10 pt-20 pb-10">
+<footer id="contact" class="bg-background-dark border-t border-white/10 pt-20 pb-10">
 <div class="container mx-auto px-4">
 <div class="flex flex-col lg:flex-row gap-12 mb-16">
 <div class="flex-1">
@@ -478,7 +473,7 @@
 <div class="flex-1 grid grid-cols-1 sm:grid-cols-2 gap-6">
 <div class="bg-[#18181A] p-6 rounded border border-white/5 flex flex-col items-center text-center hover:border-white/20 transition-all">
 <div class="w-20 h-20 rounded-full bg-gray-700 mb-4 overflow-hidden border-2 border-white/10">
-<img alt="Portrait of lead real estate agent Vittal" class="w-full h-full object-cover" data-alt="Agent Vittal" src="https://lh3.googleusercontent.com/aida-public/AB6AXuCofrcmmefGpYEf42gSLfOntfxGHYJmatJzJ-4dMdJvGpOgZO_3qN_WdP04j3RRLN4TVZhbGEVaaNXgfMYZgRWx6A0_-pdlNeZznHhCCVSkyo8zPhKRi4nGrD63YyOLuaIyINrR4-3mKaT9K5nCqULb0wrXLjvZa2bvxIy2t7Ixk8Cue-OJFPVew90X94zqEEhnzGZp5H8zWdGPBQ1HcD3or0yS0xSVVCjtl41KEgcOovtkM-d0C62qHSsZ-GYprm4sx1Tdmeuy9b3N"/>
+<img alt="Portrait of lead real estate agent Vittal" class="w-full h-full object-cover" src="vittal_face.png"/>
 </div>
 <h4 class="text-white font-bold text-lg">Vittal Design</h4>
 <span class="text-primary text-xs uppercase tracking-widest mb-4">Lead Architect Agent</span>
@@ -488,8 +483,8 @@
 </div>
 </div>
 <div class="bg-[#18181A] p-6 rounded border border-white/5 flex flex-col items-center text-center hover:border-white/20 transition-all">
-<div class="w-20 h-20 rounded-full bg-black mb-4 flex items-center justify-center border-2 border-white/10">
-<span class="material-symbols-outlined text-3xl text-white">apartment</span>
+<div class="w-20 h-20 rounded-full bg-black mb-4 overflow-hidden border-2 border-white/10">
+<img alt="Apel Design HQ logo" class="w-full h-full object-cover" src="AAD.png"/>
 </div>
 <h4 class="text-white font-bold text-lg">Apel Design HQ</h4>
 <span class="text-primary text-xs uppercase tracking-widest mb-4">Global Office</span>
