--- a/website-2/book-consultation.html
+++ b/website-2/book-consultation.html
@@ -90,18 +90,6 @@
 </div>
 <h2 class="text-white text-xl font-bold leading-tight tracking-[0.1em] uppercase">Apel Design</h2>
 </a>
-<nav class="hidden md:flex flex-1 justify-end gap-10 mr-12">
-<a class="text-text-muted hover:text-white text-xs font-semibold uppercase tracking-widest transition-colors" href="#">Properties</a>
-<a class="text-text-muted hover:text-white text-xs font-semibold uppercase tracking-widest transition-colors" href="#">Architecture</a>
-<a class="text-text-muted hover:text-white text-xs font-semibold uppercase tracking-widest transition-colors" href="#">The Fleet</a>
-<a class="text-text-muted hover:text-white text-xs font-semibold uppercase tracking-widest transition-colors" href="#">Journal</a>
-</nav>
-<button class="hidden md:flex h-10 px-6 cursor-pointer items-center justify-center bg-primary hover:bg-red-700 transition-colors text-white text-xs font-bold uppercase tracking-widest clip-path-slant">
-<span>Contact</span>
-</button>
-<button class="md:hidden text-white">
-<span class="material-symbols-outlined">menu</span>
-</button>
 </div>
 </header>
 <!-- Main Content -->
@@ -120,7 +108,7 @@
 <span class="text-xs font-bold tracking-widest uppercase">Step 01</span>
 </div>
 <h1 class="text-white text-4xl lg:text-5xl font-black leading-none tracking-[-0.02em] uppercase">
-                    Flight Plan:<br/><span class="text-text-muted">Consultation</span>
+                    Consultation
 </h1>
 <p class="text-text-muted text-sm mt-2 max-w-md leading-relaxed border-l-2 border-primary pl-4">
                     Secure your vector. Select a date and time for your private architectural briefing. All times are synchronized with Agent availability.
@@ -227,19 +215,6 @@
 </button>
 </div>
 </div>
-<!-- Agent Status -->
-<div class="mt-auto py-4 border-t border-dashed border-white/10 flex items-center gap-3">
-<div class="relative">
-<div class="size-10 rounded bg-gray-800 overflow-hidden border border-white/10">
-<img alt="Portrait of the lead architect agent in a suit" class="w-full h-full object-cover grayscale opacity-80" src="https://lh3.googleusercontent.com/aida-public/AB6AXuDFVFDCnCS2SiTfrQpEjPTlo_7g2fE3w7S1VYpOoeIkYLZqj747tDHx8pDhrn9s7DbIk0IODTBOCsId233GsgOjaqWkPoCRaUIedOqtW_kNmaq-Ls4r6kGldByOHpDsmaTHjlCVOUOoWEw6ZgAnKRW7CzhmaOS8dO9zpq5ksPl8eRiH5e7rn-XtULrjOY0BMv2UchyrXxnCVqifOBodlLAnS4aTbjjUm0tAk5s_SkH8tPcS9Jex_hKSrONF4AejGFWKUrmSgXzKimI3"/>
-</div>
-<div class="absolute -bottom-1 -right-1 size-3 bg-green-500 border-2 border-[#0B0B0D] rounded-full"></div>
-</div>
-<div>
-<p class="text-white text-xs font-bold uppercase tracking-wider">Agent: J. Reynolds</p>
-<p class="text-text-muted text-[10px]">Calendar Synced • Online</p>
-</div>
-</div>
 </div>
 <!-- Right Column: The Form (Frosted Glass) -->
 <div class="relative z-10 w-full lg:w-7/12 flex flex-col px-6 lg:pl-12 py-8 lg:py-0">
@@ -325,4 +300,5 @@
 </footer>
 <!-- Background Pattern Image (Abstract map for aviation theme context) -->
 <div class="fixed inset-0 z-[-1] opacity-[0.03] pointer-events-none" data-alt="Abstract dark aerial view of city lights resembling a map or runway layout" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAFFu64nIvILtiwuxX6fpTNjAXybIl0q2LkS7DKvPPHzkViYbSL9WGIDDWwOc1up58CPiFNTimxfkmQzfBZqR8vAdQ5aqV9MG6gnPjbAe7GvYzCDvpgFB3k9Wgn4Z-Lf0TTMvQzHyhjWMRXwJMwYBrNNtoB3iGecNcA3I-LCEKidbXOQk9x8MPhdw-JUlOdilDAoJ5-HECfXoShfQUfsSUXbfgZJdToaZSnaS0rgneOzNN_P4Qd_ZnoXpDXFyOpynL0brrc3LWyDF58'); background-size: cover; background-position: center;"></div>
+<script src="consultation.js"></script>
 </body></html>
